--- a/mainapp/templates/mainapp/includes/modal-newEmployee.html
+++ b/mainapp/templates/mainapp/includes/modal-newEmployee.html
@@ -5,7 +5,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Новый член РСПС</h5>
+				<h5 class="modal-title" id="exampleModalLabel">Новый член РСПС&nbsp;<small><i class="fa fa fa-info-circle text-info ml-2" data-container="body" data-toggle="popover" data-trigger='hover' data-placement="top" data-content="Cогласно пп 4.2. Устава РСПС членами Организации могут быть: Физические лица, достигшие 18 лет - граждане Российской Федерации, иностранные граждане и лица без гражданства, имеющие образование в области сварки и родственных процессов (для лиц, не имеющих образования в области сварки и родственных процессов необходим опыт работы в области сварки не менее 5 лет), разделяющие цели и задачи Организации, выполняющие требования Устава, принимающие непосредственное участие в работе Организации; Юридические лица - общественные объединения специалистов в области сварки и родственных процессов, разделяющие цели и задачи Организации, выполняющие требования настоящего Устава, принимающие непосредственное участие в работе Организации."></i></small></h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
