--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -461,16 +461,28 @@ main {
 		}
 	}
 	/* End Conferences */
-	
+	.carousel-container {
+		background: #E8EEF2;
+		
+		.carousel {
+			height: 450px;
+			overflow: hidden;
+
+			@media (max-width: 576px){
+				height: 300px;
+			}
+		}
+	}
+
 	.search {
 		background: #E8EEF2;
 		.form-check-input {
 			margin-top: 0.3rem;
 		}
 	}
-
+	
 	.registration {
-		.row	{
+		.row {
 			border: solid 1px #e5e5e5;
 		    vertical-align: middle;
 		    border-bottom: 0;
@@ -507,11 +519,19 @@ main {
 				margin-top: 0.3rem;
 			}
 		}
+		
 	}
 
 	.bg-red {
 		background-color: #A92119;
 		box-shadow: inset 0 -2px 3px 0 #780400;
+	}
+	.bg-gray {
+		    background-color: #d9e3ea;
+    	background-image: url(../images/bg-gray.gif);
+    	background-repeat: no-repeat;
+    	background-position: center top;
+		box-shadow: inset 0 -2px 3px 0 #585c5f;
 	}
 	.map {
 		background-color: #fff;
@@ -553,4 +573,9 @@ main {
 .datepicker {
 	z-index: 10000;
 }
+.popover {
+	    /* padding: .5rem .75rem; */
+	    color: #6c757d !important;
+	    font-size: 0.75rem;
+	}
 
