--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -25,7 +25,7 @@
 						<div class="card-body">
 							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
 							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
+							<a href="{% url 'news_detail' %}" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
 						</div>
 					</div>
 				</div>
@@ -39,7 +39,7 @@
 						<div class="card-body">
 							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
 							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
+							<a href="{% url 'news_detail' %}" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
 						</div>
 					</div>
 				</div>
@@ -53,7 +53,7 @@
 						<div class="card-body">
 							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
 							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
+							<a href="{% url 'news_detail' %}" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
 						</div>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 						<div class="card-body">
 							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
 							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
+							<a href="{% url 'news_detail' %}" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
 						</div>
 					</div>
 				</div>
@@ -81,7 +81,7 @@
 						<div class="card-body">
 							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
 							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
+							<a href="{% url 'news_detail' %}" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
 						</div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 						<div class="card-body">
 							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
 							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
+							<a href="{% url 'news_detail' %}" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
 						</div>
 					</div>
 				</div>
