--- a/static/css/style.css
+++ b/static/css/style.css
@@ -349,6 +349,14 @@ main {
     padding: 2px 5px; }
     main .card-all .card-footer .btn-xs:last-child {
       padding: 2px 6px; }
+  main .carousel-container {
+    background: #E8EEF2; }
+    main .carousel-container .carousel {
+      height: 450px;
+      overflow: hidden; }
+      @media (max-width: 576px) {
+        main .carousel-container .carousel {
+          height: 300px; } }
   main .search {
     background: #E8EEF2; }
     main .search .form-check-input {
@@ -381,6 +389,13 @@ main {
     background-color: #A92119;
     -webkit-box-shadow: inset 0 -2px 3px 0 #780400;
     box-shadow: inset 0 -2px 3px 0 #780400; }
+  main .bg-gray {
+    background-color: #d9e3ea;
+    background-image: url(../images/bg-gray.gif);
+    background-repeat: no-repeat;
+    background-position: center top;
+    -webkit-box-shadow: inset 0 -2px 3px 0 #585c5f;
+    box-shadow: inset 0 -2px 3px 0 #585c5f; }
   main .map {
     background-color: #fff;
     -webkit-box-shadow: 0 -1px 3px 0 #999, inset 0 -3px 4px 0 #666;
@@ -407,3 +422,8 @@ main {
 /* Calendar */
 .datepicker {
   z-index: 10000; }
+
+.popover {
+  /* padding: .5rem .75rem; */
+  color: #6c757d !important;
+  font-size: 0.75rem; }
