--- a/mainapp/templates/mainapp/news_detail.html
+++ b/mainapp/templates/mainapp/news_detail.html
@@ -12,23 +12,20 @@
 			</ol>
 		</nav>
 
-		<h4 class="title-page">11-12 октября состоялся семинар в Москве</h4>
+		<h4 class="title-page">{{ post.title }}</h4>
 
 		<div class="row mb-4">
 			<div class="col-auto">
 				<div class="bg-light p-2">
-					<span class="mr-3">15.10.2018</span>
+					<span class="mr-3">{{ post.published_date }}</span>
 					<span class="text-primary font-weight-bold">Калужская область</span>
 				</div>
 			</div>
 		</div>
 
 		<p class="font-weight-bold">
-			С 11 по 12 октября Московское региональное отделение Российского Сварочного Профессионального Сообщества (РСПС) совместно с АО «Глобалстрой-Инжиниринг» провело семинар «Инженерная подготовка производства и контроль качества сварочно-монтажных работ», в работе которого приняли участие 90 специалистов сварочного производства.
-		</p>
-		<p>
-			За два дня выступили почти 40 докладчиков, которые всесторонне освещали различные тенденции и проблематику сварочной отрасли. Основной акцент был сделан на производство продукции и развитие технологий сварки в условиях импортозамещения. В частности, о применении для сварки труб большого диаметра в нефтегазовой отрасли орбитальных автоматов отечественного производства рассказал руководитель регионального отделения РСПС Москвы и Московской области Владимир Бродягин. —Разработанный специалистами РСПС двухдуговой автомат АСТ-2, выпускается фирмой ИТС (Симферополь) и обеспечивает более высокое качество швов по сравнению с импортными аналогами, — отметил докладчик. Тема импортозамещения получила продолжение в выступлении руководителя ООО «Аттестационный Центр Городского Хозяйства» Юрия Доронина, который рассказал участникам семинара об использовании в заводских условиях и при монтаже гибких формирующих подкладных пят марки ЛФС, которые не уступают своим зарубежным аналогам, и могут служить как материал и технология сварки в качестве импортозамещающего продукта. Материалы марки ЛФС серийно выпускаются, рекомендованы НАКС и прошли необходимую процедуру аттестации. 13 октября участники семинара посетили выставку Weldex, где смогли непосредственно ознакомиться с продукцией отечественных производителей сварочного оборудования и материалов.
-		</p>
+			{{ post.text|safe }}
+			</p>
 		<div class="carousel-container mb-4">
 			<div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="false" data-pause="false">
 				<ol class="carousel-indicators">
@@ -57,7 +54,7 @@
 				</a>
 			</div>
 		</div>
-		<a href="{% url 'index' %}" class="btn btn-outline-primary btn-xs mb-5"><i class="fa fa-angle-left mr-2"></i>Назад к списку новостей</a>
+	<a href="{% url 'news' %}" class="btn btn-outline-primary btn-xs mb-5"><i class="fa fa-angle-left mr-2"></i>Назад к списку новостей</a>
 	</div>
 
 	<div class="py-5 mb-4 bg-red">
