--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -19,6 +19,9 @@
 	<link href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}"rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+	<!-- flickity-carousel -->
+	<link rel="stylesheet" href="{% static 'css/flickity.min.css' %}">
+
 	<!-- My styles -->
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	{% endblock %}
@@ -47,10 +50,12 @@
 	<script src="{% static 'js/jquery-ui.min.js' %}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	
+	<!-- Parallax -->
+	<script src="{% static 'js/parallax.min.js' %}"></script>
 	<!-- Datepicker -->
 	<script src="{% static 'js/datepicker.min.js' %}"></script>
-
+	<!-- flickity-carousel -->
+	<script src="{% static 'js/flickity.pkgd.min.js' %}"></script>
 	<!-- My scripts -->
 	<script src="{% static 'js/script.js' %}"></script>
 
