--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -31,7 +31,191 @@
 				</div>
 			</div>
 		</div>
+		<div class="bg-parallax py-5" data-parallax="scroll" data-bleed="10" data-image-src="{% static 'images/main-par1.jpg' %}">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-md-7 col-lg-5">
+						<h6 class="font-weight-bold text-white">Российское сварочное профессиональное сообщество объединяет наиболее квалифицированных и компетентных специалистов по сварке</h6>
+						<h3 class="font-weight-bold text-white mb-0">В состав РСПС входит 61 региональное отделение</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="bg-blue py-5">
+			<h4 class="text-uppercase font-weight-bold my-3">Региональные отделения РСПС</h4>
+		</div>
+
+		<div class="map pb-1" id="mapRegion">
+			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A39cfcc4d2def19d911b4f9876888bc18de829607b71238a144002462c1e3a9c7&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=false"></script>
+		</div>
+		<div class="bg-red py-5 mb-4">
+			<button type="button" class="btn btn-danger btn-xl" data-toggle="modal" data-target="#modal-newDepartament">Открыть региональное отделение</button>
+		</div>
+		<div class="bg-white-index pt-4 mb-4">
+			<div class="container">
+				<h4 class="title-page text-center">Цели и задачи РСПС</h4>
+				<div class="table-responsive">
+					<table class="table table-list">
+						<tbody>
+							<tr>
+								<td class="text-uppercase text-primary">
+									ПРЕДСТАВЛЕНИЕ И ЗАЩИТА ПРАВ, ОБЩИХ ИНТЕРЕСОВ ЧЛЕНОВ РОССИЙСКОГО СВАРОЧНОГО ПРОФЕССИОНАЛЬНОГО СООБЩЕСТВА
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									ПОВЫШЕНИЕ КАЧЕСТВА И КОНКУРЕНТОСПОСОБНОСТИ ПРОДУКЦИИ СВАРОЧНОГО ПРОИЗВОДСТВА РФ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									УЧАСТИЕ В ПОДГОТОВКЕ И ОБСУЖДЕНИИ НОРМАТИВНЫХ ПРАВОВЫХ АКТОВ И ИНЫХ ДОКУМЕНТОВ, ОПРЕДЕЛЯЮЩИХ РАЗВИТИЕ СВАРОЧНОГО ПРОИЗВОДСТВА В РОССИЙСКОЙ ФЕДЕРАЦИИ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									РАЗВИТИЕ ВСЕСТОРОННЕГО СОТРУДНИЧЕСТВА МЕЖДУ СПЕЦИАЛИСТАМИ СВАРОЧНОГО ПРОИЗВОДСТВА, СОДЕЙСТВИЕ УКРЕПЛЕНИЮ СВЯЗИ МЕЖДУ НАУКОЙ, ОБРАЗОВАНИЕМ И ПРОИЗВОДСТВОМ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									РАЗВИТИЕ МЕЖРЕГИОНАЛЬНОГО И МЕЖДУНАРОДНОГО НАУЧНО-ТЕХНИЧЕСКОГО СОТРУДНИЧЕСТВА В ОБЛАСТИ СВАРКИ И РОДСТВЕННЫХ ПРОЦЕССОВ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									УЧАСТИЕ В ОРГАНИЗАЦИИ И КООРДИНАЦИИ НАУЧНЫХ ИССЛЕДОВАНИЙ И РАЗРАБОТОК В ОБЛАСТИ СВАРКИ И РОДСТВЕННЫХ ПРОЦЕССОВ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ ВНЕДРЕНИЮ ОТЕЧЕСТВЕННЫХ И МИРОВЫХ ИННОВАЦИОННЫХ РАЗРАБОТОК В ОБЛАСТИ СВАРКИ И РОДСТВЕННЫХ ПРОЦЕССОВ В ПРАКТИЧЕСКУЮ ДЕЯТЕЛЬНОСТЬ ЧЛЕНОВ ОРГАНИЗАЦИИ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ РАЗВИТИЮ В РОССИЙСКОЙ ФЕДЕРАЦИИ СВОБОДНОГО ПРЕДПРИНИМАТЕЛЬСТВА И СОТРУДНИЧЕСТВА В СФЕРЕ СВАРОЧНОГО ПРОИЗВОДСТВА, ФОРМИРОВАНИЮ ПРОИЗВОДСТВЕННЫХ СВЯЗЕЙ И КООПЕРАЦИИ ОРГАНИЗАЦИЙ И ПРЕДПРИЯТИЙ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ СОВЕРШЕНСТВОВАНИЮ РЫНОЧНОЙ ИНФРАСТРУКТУРЫ И СОЗДАНИЮ ПРЕИМУЩЕСТВЕННЫХ УСЛОВИЙ ДЛЯ ДЕЯТЕЛЬНОСТИ ОТЕЧЕСТВЕННЫХ ПРЕДПРИЯТИЙ, ОРГАНИЗАЦИЙ И СПЕЦИАЛИСТОВ В ОБЛАСТИ СВАРОЧНОГО ПРОИЗВОДСТВА И ИХ ЗАЩИТЕ ОТ НЕДОБРОСОВЕСТНОЙ КОНКУРЕНЦИИ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ ОСУЩЕСТВЛЕНИЮ ЕДИНОЙ ТЕХНИЧЕСКОЙ ПОЛИТИКИ В ОБЛАСТИ СВАРОЧНОГО ПРОИЗВОДСТВА
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ ПРОФЕССИОНАЛЬНОЙ КОНСОЛИДАЦИИ СПЕЦИАЛИСТОВ, ЗАНЯТЫХ В СФЕРЕ СВАРОЧНОГО ПРОИЗВОДСТВА, НАУКИ, ОБРАЗОВАНИЯ, ОЦЕНКИ СООТВЕТСТВИЯ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ ПОВЫШЕНИЮ ПРЕСТИЖА ПРОФЕССИЙ В ОБЛАСТИ СВАРКИ И РОДСТВЕННЫХ ПРОЦЕССОВ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									УЧАСТИЕ В РЕШЕНИИ ВОПРОСОВ ПОДГОТОВКИ И ЗАНЯТОСТИ ПЕРСОНАЛА СВАРОЧНОГО ПРОИЗВОДСТВА, УЛУЧШЕНИЯ УСЛОВИЙ И ОХРАНЫ ТРУДА
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									ОКАЗАНИЕ ПОМОЩИ ЧЛЕНАМ ОРГАНИЗАЦИИ В ПРИМЕНЕНИИ И РАЗВИТИИ ИХ ПРОФЕССИОНАЛЬНЫХ НАВЫКОВ НА ВНУТРЕННЕМ И ВНЕШНЕМ РЫНКЕ ТРУДА
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									СОДЕЙСТВИЕ СОЗДАНИЮ УСЛОВИЙ ДЛЯ АКТИВНОЙ ПРОФЕССИОНАЛЬНОЙ И ОБЩЕСТВЕННОЙ ДЕЯТЕЛЬНОСТИ ЧЛЕНОВ ОРГАНИЗАЦИИ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									ОСУЩЕСТВЛЕНИЕ МЕТОДИЧЕСКОЙ, ТЕХНИЧЕСКОЙ И ПРАВОВОЙ ПОДДЕРЖКИ ЧЛЕНОВ ОРГАНИЗАЦИИ
+								</td>
+							</tr>
+							<tr>
+								<td class="text-uppercase text-primary">
+									РАЗВИТИЕ И СОВЕРШЕНСТВОВАНИЕ ЕДИНОГО ИНФОРМАЦИОННОГО ПРОСТРАНСТВА В СФЕРЕ СВАРОЧНОГО ПРОИЗВОДСТВА, НАУКИ, ОБРАЗОВАНИЯ, ОЦЕНКИ СООТВЕТСТВИЯ И СВАРОЧНОГО ПРОФЕССИОНАЛЬНОГО СООБЩЕСТВА
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 		
+		<div class="bg-white-index pt-4 mb-5">
+			<div class="container">
+				<h4 class="title-page text-center">Партнёры</h4>
+
+				<!-- Flickity HTML init -->
+				<div class="carousel" data-flickity='{ "groupCells": true }'>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel1.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel2.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel3.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel4.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-naks.png' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel5.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel6.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel7.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel8.gif' %}" alt="">
+					</div>
+					<div class="carousel-cell">
+						<img src="{% static 'images/logo-carousel9.gif' %}" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="bg-red py-5 mb-4">
+			<button type="button" class="btn btn-danger btn-xl" data-toggle="modal" data-target="#modal-newEmployee">Стать членом сообщества</button>
+		</div>
+
+		<div class="bg-white-index pt-4 mb-4">
+			<div class="container">
+				<h4 class="title-page text-center">Вопросы подготовки и занятости персонала сварочного производства</h4>
+				<iframe src="http://www.bewelder.ru/last/" width="100%" height="400" frameborder="0"></iframe>
+			</div>
+		</div>
+		
+		<div class="bg-blue py-5">
+			<a href="http://www.bewelder.ru/" role="button" class="btn btn-primary btn-xl d-inline-block" target="_blank">Посмотреть все вакансии</a>
+		</div>
+		
+		<div class="bg-parallax py-5" data-parallax="scroll" data-bleed="10" data-image-src="{% static 'images/main-par2.jpg' %}">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-md-7 col-lg-5">
+						<h3 class="font-weight-bold text-white mb-0">Внедрение отечественных и мировых инновационных разработок в области сварки и родственных процессов</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="bg-red py-5 mb-4 text-center">
+			<a href="{% url 'registration' %}" role="button" class="btn btn-danger btn-xl d-inline-block">Подписаться на новости</a>
+		</div>
 	</main> <!-- End Content -->
 
 	
