--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,7 +182,7 @@ main {
   main .nav-tabs .nav-link {
     border-radius: 0;
     color: #086da3; }
-  main .btn-xl {
+  main .btn-danger.btn-xl {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -196,8 +196,22 @@ main {
     text-shadow: #290100 0 -1px 0;
     padding: 20px 50px;
     font-size: 1rem; }
-    main .btn-xl:hover {
+    main .btn-danger.btn-xl:hover {
       background-color: #dc3545 !important; }
+  main .btn-primary.btn-xl {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #016fab;
+    background: #0a80c0 !important;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 -4px 0 #00527f;
+    box-shadow: inset 0 -4px 0 #00527f;
+    text-shadow: #290100 0 -1px 0;
+    padding: 20px 50px;
+    font-size: 1rem; }
+    main .btn-primary.btn-xl:hover {
+      background: #0a89cf !important; }
   main .table-list {
     font-size: 0.75rem;
     color: #666666; }
@@ -396,6 +410,21 @@ main {
     background-position: center top;
     -webkit-box-shadow: inset 0 -2px 3px 0 #585c5f;
     box-shadow: inset 0 -2px 3px 0 #585c5f; }
+  main .bg-parallax {
+    min-height: 250px;
+    background: transparent; }
+  main .bg-blue {
+    background-color: #086ba1;
+    background-image: url(../images/bg-blue.gif);
+    background-repeat: no-repeat;
+    background-position: center top;
+    text-align: center;
+    color: #FFFFFF;
+    text-shadow: 0 -1px 0 #030303; }
+  main .bg-white-index {
+    /* padding-top: 20px; */
+    background-image: url(../images/bg-zub.gif);
+    background-repeat: repeat-x; }
   main .map {
     background-color: #fff;
     -webkit-box-shadow: 0 -1px 3px 0 #999, inset 0 -3px 4px 0 #666;
