--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -14,111 +14,34 @@
 		<h4 class="title-page mb-4">Новости РСПС</h4>
 
 		<div class="card-all">
-			<div class="row">
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% static 'images/news1.jpg' %}" alt="">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
-							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% static 'images/news2.jpg' %}" alt="">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
-							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% static 'images/news3.jpg' %}" alt="">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
-							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% static 'images/news4.jpg' %}" alt="">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
-							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% static 'images/news1.jpg' %}" alt="">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
-							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% static 'images/news1.jpg' %}" alt="">
-							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.11.2019</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">11-12 октября состоялся Семинар в Москве</h6>
-							<p class="card-text mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit animi inventore dolorem blanditiis atque fugit sed, quo soluta tempore ea alias hic amet ipsum est.</p>
-							<a href="#" class="card-link" target="_blank">Подробнее<i class="fa fa-arrow ml-2"></i></a>
-						</div>
-					</div>
-				</div>
+			<div class="row flex-wrap">
+				{% for publication in posts %}
+					{% include 'mainapp/includes/news-list-card.html' %}
+				{% endfor %}
 			</div>
 		</div>
 
-		<nav aria-label="Page navigation example">
-			<ul class="pagination pagination-sm">
-				<li class="page-item disabled">
-					<a class="page-link" href="#" aria-label="Previous">
-						<span aria-hidden="true">&laquo;</span>
-					</a>
-				</li>
-				<li class="page-item active"><a class="page-link" href="#">1</a></li>
-				<li class="page-item"><a class="page-link" href="#">2</a></li>
-				<li class="page-item"><a class="page-link" href="#">3</a></li>
-				<li class="page-item">
-					<a class="page-link" href="#" aria-label="Next">
-						<span aria-hidden="true">&raquo;</span>
-					</a>
-				</li>
-			</ul>
-		</nav>
+            <div class="mt-4">
+                <nav>
+                    <ul class="pagination">
+
+                        {% if posts.has_previous %}
+                        <li class="page-item"><a class="page-link" href="?page=1">стр. 1</a></li>
+                        <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}"><i class="fa fa-arrow-left"></i></a></li>
+                        {% endif %}
+
+                        <li class="page-item active"><a class="page-link" href="?page={{ posts.number }}">
+                        {{ posts.number }} из {{ posts.paginator.num_pages }}</a></li>
+
+                        {% if posts.has_next %}
+                        <li class="page-item"><a class="page-link" href="?page={{ posts.next_page_number }}"> <i class="fa fa-arrow-right"></i></a></li>
+                        <li class="page-item"><a class="page-link" href="?page={{ posts.paginator.num_pages }}">стр. {{ posts.paginator.num_pages}}
+                               </a></li>
+                        {% endif %}
+
+                    </ul>
+                </nav>
+            </div>
 	</div>
 </main> 
 <!-- End Content -->
