--- a/mainapp/templates/mainapp/news_detail.html
+++ b/mainapp/templates/mainapp/news_detail.html
@@ -18,7 +18,7 @@
 			<div class="col-auto">
 				<div class="bg-light p-2">
 					<span class="mr-3">{{ post.published_date }}</span>
-					<span class="text-primary font-weight-bold">Калужская область</span>
+					<span class="text-primary font-weight-bold">{{ post.short_description }}</span>
 				</div>
 			</div>
 		</div>
@@ -34,15 +34,17 @@
 					<li data-target="#carouselIndicators" data-slide-to="2"></li>
 				</ol>
 				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="{% static 'images/news_detail1.jpg' %}" class="d-block img-fluid mx-auto" alt="фото">
+					{% for photo in photos %}
+					<div class="carousel-item {% if forloop.first %}active{% endif %}">
+						<img src="{{ photo.image.url }}" class="d-block img-fluid mx-auto" alt="{{ photo.image }}">
 					</div>
-					<div class="carousel-item ">
+					{% endfor %}
+					{% comment %} <div class="carousel-item ">
 						<img src="{% static 'images/news_detail2.jpg' %}" class="d-block img-fluid mx-auto" alt="фото">
 					</div>
 					<div class="carousel-item ">
 						<img src="{% static 'images/news_detail3.jpg' %}" class="d-block img-fluid mx-auto" alt="фото">
-					</div>
+					</div> {% endcomment %}
 				</div>
 				<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
