--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -10,22 +10,19 @@
 		<div class="bg-gray py-5">
 			<div class="container">
 				<div class="card-deck">
-					<div class="card">
-						<img src="{% static 'images/news1.jpg' %}" class="card-img" alt="...">
+					<div class="card img-container" style="background-image: url(static/images/news1.jpg);">
 						<div class="card-img-overlay">
-							<h5 class="card-title">Card title</h5>
+							<a href="#">Конференция РСПС в Туле</a>
 						</div>
 					</div>
-					<div class="card">
-						<img src="{% static 'images/news_detail3.jpg' %}" class="card-img" alt="...">
+					<div class="card img-container" style="background-image: url(static/images/news2.jpg);">
 						<div class="card-img-overlay">
-							<h5 class="card-title">Card title</h5>
+							<a href="#">11-12 октября состоялся семинар в Москве</a>
 						</div>
 					</div>
-					<div class="card">
-						<img src="{% static 'images/news1.jpg' %}" class="card-img" alt="...">
+					<div class="card img-container" style="background-image: url(static/images/news3.jpg);">
 						<div class="card-img-overlay">
-							<h5 class="card-title">Card title</h5>
+							<a href="#">Конференция РСПС в Рязани</a>
 						</div>
 					</div>
 				</div>
