--- a/static/css/style.css
+++ b/static/css/style.css
@@ -425,6 +425,25 @@ main {
     /* padding-top: 20px; */
     background-image: url(../images/bg-zub.gif);
     background-repeat: repeat-x; }
+  main .img-container {
+    height: 250px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+    main .img-container .card-img-overlay {
+      position: absolute;
+      top: auto;
+      bottom: 0;
+      padding: 0; }
+      main .img-container .card-img-overlay a {
+        display: block;
+        font-size: 1rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: white;
+        background-color: #000;
+        opacity: 0.6;
+        padding: 1rem; }
   main .map {
     background-color: #fff;
     -webkit-box-shadow: 0 -1px 3px 0 #999, inset 0 -3px 4px 0 #666;
