--- a/mainapp/templates/mainapp/includes/news-list-card.html
+++ b/mainapp/templates/mainapp/includes/news-list-card.html
@@ -1,17 +1,22 @@
+
 <div class="col-sm-6 col-lg-4 mb-3">
-					<div class="card rounded-0">
-						<div class="card-top">
-							<img class="card-img-top" src="{% if publication.photo.image %}
-							{{ publication.photo.image.url }}
-							{% else %}
-							https://place-hold.it/360x200
-							{% endif %}" alt="">
-							<div class="card-img-overlay-right">{{ publication.post.published_date }}</div>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title mb-3">{{ publication.post.title }}</h6>
-							<div class="card-text">{{ publication.post.short_description }}</div>
-							<a href="{% url 'details' publication.post.pk %}" class="card-link">Подробнее<i class="fa fa-angle-right ml-2"></i></a>
-						</div>
-					</div>
-				</div>
+	<div class="card rounded-0">
+		<div class="card-top img-container" style="background-image: url(
+			{% if publication.photo.image %}
+		{{ publication.photo.image.url }})
+		static/images/news1.jpg
+		{% endif %} ;">
+			<!-- <img class="card-img-top" src="{% if publication.photo.image %}
+			{{ publication.photo.image.url }}
+			{% else %}
+			https://place-hold.it/360x200
+			{% endif %}" alt=""> -->
+			<div class="card-img-overlay-right">{{ publication.post.published_date }}</div>
+		</div>
+		<div class="card-body">
+			<h6 class="card-title mb-3">{{ publication.post.title }}</h6>
+			<div class="card-text">{{ publication.post.short_description }}</div>
+			<a href="{% url 'details' publication.post.pk %}" class="card-link">Подробнее<i class="fa fa-angle-right ml-2"></i></a>
+		</div>
+	</div>
+</div>
