--- a/mainapp/templates/mainapp/includes/news-list-card.html
+++ b/mainapp/templates/mainapp/includes/news-list-card.html
@@ -1,16 +1,15 @@
 
 <div class="col-sm-6 col-lg-4 mb-3">
-	<div class="card rounded-0">
-		<div class="card-top img-container" style="background-image: url(
-			{% if publication.photo.image %}
-		{{ publication.photo.image.url }})
-		static/images/news1.jpg
-		{% endif %} ;">
-			<!-- <img class="card-img-top" src="{% if publication.photo.image %}
+	<div class="card w-100 rounded-0">  <!-- ====== 1. Добавить класс "w-100" ========= -->
+		<div class="card-top img-container" style="">  <!-- ====== 2. Добавить соответствующий стиль style="background-image: url(../static/images/news1.jpg);" ========= -->
+
+			<!-- ======= 3. Полностью убрать тег 'img' ======== -->
+			<img class="card-img-top" src="{% if publication.photo.image %}
 			{{ publication.photo.image.url }}
 			{% else %}
 			https://place-hold.it/360x200
-			{% endif %}" alt=""> -->
+			{% endif %}" alt="">
+
 			<div class="card-img-overlay-right">{{ publication.post.published_date }}</div>
 		</div>
 		<div class="card-body">
